feat(api): add scan info endpoint
